# OTUS-HW-Timus

./: .gitignore  CMakeLists.txt  OTUS-3.cpp  Otus-HW2-HightBinPow.cpp  Timus-1000.cpp  Timus-1001.cpp  Timus-1068.cpp  Timus-1131.cpp  Timus-1180.cpp  Timus-1196.cpp  Timus-1197.cpp  Timus-1209.cpp  Timus-1264.cpp  Timus-1293.cpp  Timus-1409.cpp  Timus-1496.cpp  Timus-1545.cpp  Timus-1585.cpp  Timus-1636.cpp  Timus-1785.cpp  Timus-1787.cpp  Timus-1820.cpp  Timus-1837.cpp  Timus-1877.cpp  Timus-1880.cpp  Timus-1910.cpp  Timus-1924.cpp  Timus-2001.cpp  Timus-2012.cpp  Timus-2023.cpp  Timus-2066.cpp  Timus-2100.cpp
